fixing icons for dark modes

--- a/src/js/assets/scss/icons-dark.scss
+++ b/src/js/assets/scss/icons-dark.scss
@@ -6,6 +6,7 @@
 		--icon-polls: url('../icons/polls-fff.svg');
 		--icon-circles: url('../icons/circles-fff.svg');
 		--icon-polls-back: url('../icons/back-fff.svg');
+		--icon-polls-anonymous: url('../icons/anonymous-fff.svg');
 		--icon-polls-confirmed: url('../icons/confirmed-fff.svg');
 		--icon-polls-unconfirmed: url('../icons/unconfirmed-fff.svg');
 		--icon-polls-clone: url('../icons/clone-fff.svg');
